MeetingRooms ISSUE findByName has to be Optional resolved